--- a/Resnet50_landmarks.ipynb
+++ b/Resnet50_landmarks.ipynb
@@ -27,6 +27,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KxaaRlriZICQ"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zqdKv5dwZM5v"
+      },
+      "source": [
+        "from tensorflow.keras.applications.resnet50 import ResNet50\n",
+        "from tensorflow.keras.preprocessing import image\n",
+        "from tensorflow.keras.applications.resnet50 import preprocess_input, decode_predictions\n",
+        "import numpy as np"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Vg94o4icFAW_"
       },
       "source": [
